# azs_program

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  azs.sqlite  coreviews.cpp  funjs.cpp  main.cpp  views.cpp
android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/example/azs/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/www/: index.html
android/app/src/main/assets/www/css/: style.css
android/app/src/main/assets/www/js/: logic.js  main.js
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/java/com/example/azs/: MainActivity.java
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/example/azs/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
coreazs/: CMakeLists.txt  coreazs.c  coreazs.cpp  parser.c
coreazs/ConnecterC++/: INFO_BIN
coreazs/include/: coreazs.h  parser.h
include/: coreviews.h  funjs.h  views.h
res/: Описание таблиц топлива.doc  Структура таблиц товара.doc
restart/: restart.cpp  restart.h
