cmake_minimum_required(VERSION 3.4)
project(COREAZS)
if (MSVC)
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MD")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MDd")
endif()
include_directories("include/sqlite")
set(CMAKE_THREAD_LIBS_INIT "-lpthread")
    set(CMAKE_HAVE_THREADS_LIBRARY 1)
    set(CMAKE_USE_WIN32_THREADS_INIT 0)
    set(CMAKE_USE_PTHREADS_INIT 1)
    set(THREADS_PREFER_PTHREAD_FLAG ON)

add_library(${PROJECT_NAME} SHARED coreazs.c src/sqlite3.c)
if(WIN32)
  target_link_libraries(${PROJECT_NAME} wsock32 ws2_32)
endif()